Need to find a nice way to prevent this 1px overflow

--- a/htdocs/css/main.css
+++ b/htdocs/css/main.css
@@ -25,7 +25,7 @@ a:hover {
 	margin: 0 auto;
 	overflow:visible;
 	text-align: left; /* be nice to IE */
-	width: 778px;
+	width: 777px;
 }
 
 #navbar {
